# CPUPathTrace

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  clang-format-all.sh
benchmark/: main.cpp
demo/: main.cpp
fuzz/: target_image_io_read.cpp  target_mesh_parser.cpp
include/PathTrace/: base.h  camera.h  post_processing.h  worker.h
include/PathTrace/image/: image.h  image_io.h
include/PathTrace/scene/: bounding_box.h  light.h  material.h  mesh.h  object.h  propagation.h  scene.h
include/PathTrace/util/: color.h  matrix.h  vector.h
src/: camera.cpp  post_processing.cpp  worker.cpp
src/image/: image_io.cpp
src/scene/: bounding_box.cpp  light.cpp  material.cpp  mesh.cpp  object.cpp  propagation.cpp  scene.cpp
test/: main.cpp  post_processing_test.cpp  render_test.cpp  test_utils.cpp  test_utils.h
test/image/: image_io_test.cpp
test/scene/: boundig_box_test.cpp  mesh_test.cpp  scene_test.cpp
